# Second-Try

./: README.md  main.py  pyproject.toml
website/: __init__.py  assign.py  auth.py  database.db  models.py  views.py
website/static/: chore.css  index.js
website/templates/: adchore.html  add.html  adhome.html  adlogin.html  admaid.html  adsign_up.html  announce.html  announcements.html  base.html  chores.html  clear.html  clearAnnouncements.html  clearChores.html  createAnnoun.html  home.html  requirements.html
